# traverseda.github.io

./: .gitattributes  .gitignore  .gitmodules  Tupdefault  Tupfile  Tuprules.tup  build_js.sh  checklinks.sh  compile.py  config.yaml  ideasForStartups.md  ideasForStartups.md.html  index.html  index.md  index.md.html  package-lock.json  package.json  pyproject.toml  resume.md  resume.md.html  rollup.config.js
code/: bayesForSympy.md  bayesForSympy.md.html  catCad.md  catCad.md.html  catCadChat.md  catCadChat.md.html  computing.md  computing.md.html  cssColourTest.md  cssColourTest.md.html  index.html  projects.md.html  statefullApis.md  statefullApis.md.html  voice-ai-tutorial.md  voice-ai-tutorial.md.html  webFramework.md  webFramework.md.html
content/: _index.md  archive.md  resume.md  search.md
feed/: 2020-10-13.md  2020-10-13.md.html  index.html  index.md  index.md.html  testIndex.md  testIndex.md.html
lessons/: 3Dprinting.md  3Dprinting.md.html  fastGlowforgeDesign.md  fastGlowforgeDesign.md.html  glowforge.md  glowforge.md.html  index.html  index.md  index.md.html  inkscape.md  inkscape.md.html  offgridPower.md  offgridPower.md.html
media/: blendStl.py  main.css  main.css.map  main.scss
misc/: capturedValue.md  capturedValue.md.html  discChangingRobot.md.html  index.html  plants.md  plants.md.html  systemd.md  systemd.md.html  voxelEngine.md  voxelEngine.md.html  yokoKanno.md  yokoKanno.md.html
prints/: index.html  index.md  index.md.html
scratchpad/: computing.md.html  freelancing.md  freelancing.md.html  ideasForStartups.md  ideasForStartups.md.html  (+10 more)
(+78 files in other folders)
