[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Alex Davies <traverse.da@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"
markdown2 = "^2.4.7"
pygments = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
